omxaudiodec: Unmap input buffers after usage

https://bugzilla.gnome.org/show_bug.cgi?id=736314