omx/gstomxaudiodec.c
@@ -1180,6 +1180,7 @@ gst_omx_audio_dec_handle_frame (GstAudioDecoder * decoder, GstBuffer * inbuf)
     if (err != OMX_ErrorNone)
       goto release_error;
   }
+  gst_buffer_unmap (inbuf, &minfo);
 
   GST_DEBUG_OBJECT (self, "Passed frame to component");
   if (inbuf)
@@ -1189,6 +1190,7 @@ gst_omx_audio_dec_handle_frame (GstAudioDecoder * decoder, GstBuffer * inbuf)
 
 full_buffer:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1200,6 +1202,7 @@ full_buffer:
 
 flow_error:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1208,6 +1211,7 @@ flow_error:
 
 too_large_codec_data:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1220,6 +1224,7 @@ too_large_codec_data:
 
 component_error:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1232,6 +1237,7 @@ component_error:
 
 flushing:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1240,6 +1246,7 @@ flushing:
   }
 reconfigure_error:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
@@ -1249,6 +1256,7 @@ reconfigure_error:
   }
 release_error:
   {
+    gst_buffer_unmap (inbuf, &minfo);
     if (inbuf)
       gst_buffer_unref (inbuf);
 
